@@ -2,6 +2,7 @@
 v6.1.3-git
 ----------
 
+[mms] Fix uploading attachments on Firefox 22+ in dynamic view.
 [mms] Fix image upload dialog in the HTML compose editor.
 [mms] Fix purging search previews from browser cache when switching mailboxes
       (Bug #12384).
